--- a/css/master.css
+++ b/css/master.css
@@ -2,18 +2,32 @@ html, body {
     font: 100% "Helvetica Neue", sans-serif;
     margin: 0;
     padding: 0;
+    background: #C5E6FF;
+}
+
+body {
+    padding-top: 1em;
 }
 
 form#bar {
-    margin: 2.75em 0;
+    margin: 0 1em;
+	width: 9em;
+	float: left;
 }
 
-input#search {
-	width: 18.75em;
+form label {
+    display: block;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-top: 1em;
+    font-size: .75em;
+    text-shadow: 0 1px 0 #eef, 1px 1px 0 #dde, -1px 1px 0 #dde;
+}
+
+input#time, input#from, input#to {
 	margin: 0 auto;
-	display: block;
-	font: 2em "Helvetica Neue", sans-serif;
-	font-weight: bold;
+	width: 10em;
+	font: 1.5em "Helvetica Neue", sans-serif;
 	letter-spacing: -1px;
 	padding: .1em .3em;
 	border: 1px solid #bbb;
@@ -22,4 +36,12 @@ input#search {
 	-webkit-box-shadow: 1px 1px 1px #ccc;
 	text-shadow: 1px 1px 1px #bbb;
 	-webkit-text-shadow: 1px 1px 1px #bbb;
+}
+input#time:focus, input#from:focus, input#to:focus {
+    background: #ffffcc;
+    border-color: #99b;
+}
+
+#results {
+    margin: 0 1em 2em 20em;
 }
