--- a/css/ui-lightness/jquery-ui-1.8.8.custom.css
+++ b/css/ui-lightness/jquery-ui-1.8.8.custom.css
@@ -70,7 +70,7 @@
 .ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited { color: #1c94c4; text-decoration: none; }
 /*.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus { border: 1px solid #fbcb09; background: #fdf5ce url(images/ui-bg_glass_100_fdf5ce_1x400.png) 50% 50% repeat-x; font-weight: bold; color: #c77405; }*/
 .ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus {
-    background: #eed;
+    background: #FFFFE0;
 }
 .ui-state-hover a, .ui-state-hover a:hover { color: #c77405; text-decoration: none; }
 .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { border: 1px solid #fbd850; background: #ffffff; font-weight: bold; color: #eb8f00; }
@@ -110,8 +110,8 @@
     overflow-y: auto;
     overflow-x: hidden;
     padding-right: 20px;
-	box-shadow: 0 0 5px 0 #135;
-	-webkit-box-shadow: 0 0 5px 0 #135;
+	box-shadow: 0 0 5px 0 #357;
+	-webkit-box-shadow: 0 0 5px 0 #357;
 }
 
 /* workarounds */
